# goverment-dao

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml
backend/src/: main.rs  routes.rs
blockchain/: package.json
blockchain/.openzeppelin/: project.json
blockchain/contracts/: Goverment.sol  Proposal.sol  Propose.sol
contracts/: Dockerfile
contracts/contracts/: Proposal.sol  Propose.sol
contracts/migrations/: 2_initial_government.js  3_initial_propose.js
frontend/: Dockerfile  package.json
frontend/pages/: index.tsx
frontend/pages/users/: [id].tsx  index.tsx
frontend/utils/: fetch-api.ts  sample-api.ts
